add active class

--- a/views/templates/layout.hbs
+++ b/views/templates/layout.hbs
@@ -39,25 +39,25 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav  ml-auto">
-                    <li class="nav-item">
+                <ul class="navbar-nav  ml-auto d-flex align-items-center">
+                    <li class="nav-item {{#is routeName "home"}} active {{/is}}">
                         <a class="nav-link h-a" href="/">Home </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item {{#is routeName "aboutus"}} active {{/is}}">
                         <a class="nav-link h-a" href="/aboutus">About Us</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item {{#is routeName "activites"}} active {{/is}}">
                         <a class="nav-link h-a" href="/activites">Activites</a>
                     </li>
                 </ul>
 
-                <ul class="navbar-nav">
+                <ul class="navbar-nav d-flex align-items-center">
                     {{!-- <li class="nav-item">
                         <a class="nav-link h-a" href="/stories">Stories</a>
                     </li> --}}
                     {{#if voLogged}}
-                    <li class="nav-item active">
-                        <a class="nav-link h-a" href="/students">Students</a>
+                    <li class="nav-item {{#is routeName "students"}} active {{/is}}">
+                        <a class="nav-link  h-a" href="/students">Students</a>
                     </li>
                     <li class="nav-item dropdown">
                         <div class="dropdown">
@@ -76,12 +76,12 @@
 
 
                     {{#if voLogged}}
-                    <li class="nav-item active">
+                    <li class="nav-item {{#is routeName "profile"}} active {{/is}}">
                         <a class="nav-link h-a" href="/vol/profile">Profile</a>
                     </li>
                     {{/if}}
                     {{#if userLogged}}
-                    <li class="nav-item active">
+                    <li class="nav-item {{#is routeName "profile"}} active {{/is}}">
                         <a class="nav-link h-a" href="/user/profile">Profile</a>
                     </li>
                     {{/if}}
@@ -115,11 +115,11 @@
                         </div>
                     </li>
                     {{/if}}
-                    <li class="nav-item active">
+                    <li class="nav-item {{#is routeName "contactus"}} active {{/is}}">
                         <a class="nav-link h-a" href="/contactus">Contact Us </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link h-a h-donate-btn" href="/donate">Donate</a>
+                    <li class="nav-item {{#is routeName "donate"}} active {{/is}}">
+                        <a class=" h-a h-donate-btn" href="/donate">Donate</a>
                     </li>
 
                 </ul>
