--- a/public/css/main.css
+++ b/public/css/main.css
@@ -188,3 +188,13 @@ input {
   display: flex;
   align-items: center;
 }
+
+.nav-item.active a.nav-link {
+  /* color: #2c0315 !important; */
+  font-size: 1.2rem !important;
+
+  text-transform: capitalize;
+
+  color: white;
+  text-shadow: 0 1px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa;
+}
