--- a/views/templates/home.hbs
+++ b/views/templates/home.hbs
@@ -89,7 +89,7 @@
             </div>
 
             <div class="col-6 d-flex justify-content-center align-items-center">
-                <div class="play-icon">
+                <div class="play-icon" data-toggle="modal" data-target="#openModal">
                     <i class="fas fa-play fa-2x"></i>
                 </div>
             </div>
@@ -323,3 +323,19 @@
     </div>
 </div>
 <!-- Stories Section End -->
+
+
+{{!-- Modal --}}
+<div class="modal fade" id="openModal" tabindex="-1" role="dialog" aria-labelledby="openModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <iframe width="100%" height="250px" src="https://www.youtube.com/embed/sCPREA5NFTU" frameborder="0"
+                    allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary donate-btn" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
