--- a/views/templates/students.hbs
+++ b/views/templates/students.hbs
@@ -13,7 +13,7 @@
                     <h6 class="card-text text-secondary"><strong class="text-dark">Study:</strong> {{ this.study }}</h6>
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
-                    <a href="students/{{this._id}}" class="text-primary" style="font-size: 1rem">Details</a>
+                    <a href="students/{{this._id}}" class="text-primary" style="font-size: 1rem">Profile</a>
                     <a href="students/report/{{this._id}}" class="text-primary" style="font-size: 1rem"
                         data-toggle="tooltip" data-placement="top" title="Add report for this student"><i
                             class="fas fa-info-circle"></i></a>
