add bug report page

--- a/views/templates/layout.hbs
+++ b/views/templates/layout.hbs
@@ -140,6 +140,7 @@
                 <img src="{{logoLink}}" alt="eGurukul" class="img-fluid" />
             </div>
             <ul class="footer-ul d-flex align-items-center m-0">
+
                 <li class="footer-item pr-3">
                     <a class="h-a" href="/donate"> Donate </a>
                 </li>
@@ -149,9 +150,13 @@
                 <li class="footer-item pr-3">
                     <a class="h-a" href="#"> Policy </a>
                 </li>
+                <li class="footer-item pr-3">
+                    <a class="h-a font-weight-bold" style="text-transform: uppercase" href="/bug"> Report Bug </a>
+                </li>
                 <li class="footer-item">
                     <a class="h-a" href="/contactus"> Contact us </a>
                 </li>
+
             </ul>
         </footer>
     </div>
