--- a/views/templates/activites.hbs
+++ b/views/templates/activites.hbs
@@ -34,6 +34,8 @@
                     <p class="act-details">{{ this.activity_details }}</p>
                     <button type="button" class="btn btn-outline-danger delete-act float-right mb-2"
                         data-id="{{this._id}}"><i class="fas fa-trash fa-2x"></i></button>
+                    <a href="/activites/{{this._id}}" class="btn btn-outline-info edit-act float-right mb-2 mr-2"
+                        data-id="{{this._id}}"><i class="fas fa-edit fa-2x"></i></a>
                 </div>
             </div>
         </div>
