--- a/views/partials/inputs.hbs
+++ b/views/partials/inputs.hbs
@@ -1,5 +1,5 @@
 <div class="form-group position-relative my-4">
-    <input type="{{type}}" class="input inline-input anim" name="{{name}}" />
+    <input type="{{type}}" class="input inline-input anim" value="{{value}}" name="{{name}}" />
 
     <span class="highlight"></span>
     <span class="bar"></span>
