--- a/views/partials/requiredInput.hbs
+++ b/views/partials/requiredInput.hbs
@@ -1,5 +1,5 @@
 <div class="form-group position-relative my-4">
-    <input type="{{type}}" class="anim {{className}}" name="{{name}}" required />
+    <input type="{{type}}" class="anim {{className}}" name="{{name}}" value="{{value}}" required />
 
     <span class="highlight"></span>
     <span class="bar"></span>
