fix little header issue

--- a/views/templates/home.hbs
+++ b/views/templates/home.hbs
@@ -18,7 +18,7 @@
             </div>
             <div class="carousel-item">
                 <div class="row h-100">
-                    <div class="col-md-6 header-left__img"></div>
+                    <div class="col-md-6 d-none d-md-block header-left__img"></div>
                     <div
                         class="col-md-6 header-right__content d-flex justify-content-center align-items-start flex-column">
                         <h2 class="header__content-title">A Support</h2>
