--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,8 +36,9 @@ nav.navbar {
   background: -webkit-linear-gradient(to right bottom, #e43765, #cc2e78);
   background: linear-gradient(to right bottom, #e73666, #cc2e78);
   box-shadow: 0 2px 6px #dd467e;
-  height: 80px;
-  padding: 0 1rem;
+  min-height: 80px;
+  padding: 0 0;
+  z-index: 3;
 }
 
 nav.navbar .nav-item .nav-link {
@@ -207,4 +208,21 @@ input {
 
   color: white;
   text-shadow: 0 1px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa;
+}
+
+.navbar-collapse.show {
+  background: rgba(0, 0, 0, 0.4);
+  padding: 1rem 0;
+}
+
+@media (min-width: 992px) {
+  nav.navbar.navbar-expand-lg {
+    padding: 0 1rem;
+  }
+}
+
+@media (max-width: 990px) {
+  .navbar-brand img {
+    width: 150px;
+  }
 }
